<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:padding="24dp">

    <TextView
        android:id="@+id/TV_event_details_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/event_details"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:indeterminateTint="#9C27B0"
        android:visibility="visible" />

    <TextView
        android:id="@+id/TV_detail_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/placeholder_title"
        android:textColor="#AAAAAA"
        android:textSize="32sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/TV_detail_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/placeholder_location"
        android:textColor="#AAAAAA"
        android:textSize="22sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/TV_detail_date_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/date_amp_time"
        android:textColor="#AAAAAA"
        android:textSize="20sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/TV_detail_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/registration_attendees_x"
        android:textColor="#00BCD4"
        android:textSize="22sp"
        android:textStyle="italic"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_view_QR_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D76A6A"
        android:padding="12dp"
        android:text="@string/view_qr_code"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_view_lottery_winners"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#9C27B0"
        android:padding="12dp"
        android:text="View Lottery Winners"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/IV_qr_code"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:visibility="gone" />



</LinearLayout>