<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#212121"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/activity_image_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@string/activity_image"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/btn_dialog" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/TV_event_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swimming_lessons"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_event_loc_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ymca_pool_fitness"
                android:textColor="#CFCFCF"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/TV_registration_closes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/registration_closes_in_2d_5hrs"
                android:textColor="#E68780"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/TV_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/total_capacity_25"
                android:textColor="#00BCD4"
                android:textSize="14sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>