<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="24dp">

    <TextView
        android:id="@+id/text_upload_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_poster_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_event_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_upload_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/text_placeholder_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/upload_poster_placeholder"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_event_summary"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_back_to_create"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:text="@string/upload_poster_back_to_create"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/button_continue_to_publish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_placeholder_message" />

    <Button
        android:id="@+id/button_continue_to_publish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/upload_poster_continue"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@id/button_back_to_create"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_back_to_create" />

</androidx.constraintlayout.widget.ConstraintLayout>
